--- a/src/View/MyView.fxml
+++ b/src/View/MyView.fxml
@@ -17,7 +17,7 @@
 <?import View.* ?>
 <!--<?import View.* ?>-->
 
-<BorderPane onMouseClicked="#mouseClicked" prefHeight="408.0" prefWidth="594.0" stylesheets="@MainStyle.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MyViewController">
+<BorderPane onMouseClicked="#mouseClicked" prefHeight="410.0" prefWidth="601.0" stylesheets="@MainStyle.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.MyViewController">
     <left>
         <VBox prefHeight="200.0" prefWidth="178.0" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
@@ -73,6 +73,7 @@
                         <Menu mnemonicParsing="false" text="Options">
                             <items>
                                 <MenuItem fx:id="properties" mnemonicParsing="false" onAction="#propertiesDisplay" text="Properties" />
+                        <MenuItem mnemonicParsing="false" onAction="#propertiesScene" text="Set" />
                             </items>
                         </Menu>
                   <Menu mnemonicParsing="false" text="About" />
@@ -81,13 +82,19 @@
                      <items>
                         <MenuItem fx:id="exit" mnemonicParsing="false" onAction="#exit" text="Exit" />
                      </items></Menu>
+                  <Menu mnemonicParsing="false" text="Sound">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#Unmute" text="Unmute" />
+                        <MenuItem mnemonicParsing="false" onAction="#Mute" text="Mute" />
+                     </items>
+                  </Menu>
                     </menus>
                 </MenuBar>
             </children>
         </VBox>
     </top>
     <center>
-        <Pane fx:id="pane" onScroll="#scroll" BorderPane.alignment="CENTER">
+        <Pane fx:id="pane" onDragDetected="#drag" onMouseReleased="#dragOver" onScroll="#scroll" prefHeight="700.0" prefWidth="700.0" BorderPane.alignment="CENTER">
             <children>
                 <MazeDisplayer fx:id="mazeDisplayer" height="400.0" imageFileNamePlayer="./resources/images/mario.jpg" imageFileNameWall="./resources/images/wall.png" onKeyPressed="#keyPressed" width="400.0" />
             </children>
